# Vega

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PROMPT-LYRA-OS-INTEGRACAO-TOUR-VEGA-v2.md  README.md  README.pt-br.md  dependencias.md
.github/workflows/: qa-qt.yml  qa-rust-gtk.yml  release-arch.yml  release-aur.yml  release-debian.yml  release-fedora.yml  release-opensuse.yml  windows.yml
dbus/: README.md  org.lyraos.Vega1.Backup.xml  org.lyraos.Vega1.Bluetooth.xml  org.lyraos.Vega1.DateTime.xml  org.lyraos.Vega1.Display.xml  org.lyraos.Vega1.Firewall.xml  org.lyraos.Vega1.Hardware.xml  org.lyraos.Vega1.Kernel.xml  org.lyraos.Vega1.Logs.xml  org.lyraos.Vega1.Monitor.xml  org.lyraos.Vega1.Network.xml  org.lyraos.Vega1.Services.xml  org.lyraos.Vega1.Snapshots.xml  org.lyraos.Vega1.Software.xml  org.lyraos.Vega1.Storage.xml  org.lyraos.Vega1.System.xml  org.lyraos.Vega1.Users.xml
docs/: ai-privacidade.md  qt-architecture.md  qt-benchmark.csv  qt-checkpoint.md  qt-parity.md  qt-validation.md
docs/adr/: 0001-windows-privileged-broker.md  0002-windows-packaging.md
docs/migration/: ai-privacy.md  rust-gtk-architecture.md  rust-gtk-baseline.md  rust-gtk-benchmark.csv  rust-gtk-checkpoint.md  rust-gtk-parity.md  rust-gtk-qa.md
docs/release/: aur-publish.md  v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md  v3.1.0.md  v3.2.0.md  v4.0.0.md  v4.0.1.md  v4.0.2.md  v4.0.3.md  v4.0.5.md
docs/specs/: PROMPT-VEGA-MODULO-BACKUP.md  PROMPT-VEGA.md
docs/validation/: vega-end-to-end.md  windows-issue-61-handoff.md
docs/windows/: ai-platform.md  auto-update.md  backup-restic.md  bluetooth-wallpaper-monitores.md  qa-release-gate.md  rede-wifi-firewall.md  security-dependencies.md  services-event-log.md  usuarios-data-hora.md  winget-backend.md
lyra-vega-dbus/: Cargo.toml
lyra-vega-dbus/src/: backup.rs  bluetooth.rs  client.rs  datetime.rs  firewall.rs  hardware.rs  kernel.rs  lib.rs  logs.rs  monitor.rs  network.rs  services.rs  snapshots.rs  software.rs  storage.rs  system.rs  users.rs
packaging/debian-src/: vega-wrapper.sh
packaging/debian-src/debian/: changelog  control  copyright  rules  vega.postinst  vegad.postinst  vegad.postrm  vegad.prerm
packaging/fedora/: vega-cli.spec  vega-qt.spec  vega.spec  vegad.spec
packaging/obs/: _service  vega-cli.spec  vega-gtk.spec  vegad.spec
packaging/opensuse/: install.sh  uninstall.sh  vega-cli.spec  vega-qt.spec  vega.spec  vegad.spec
packaging/vega/: PKGBUILD  vega.desktop
packaging/vega-cli/: PKGBUILD  vega-cli.desktop
packaging/vega-qt/: PKGBUILD
packaging/vegad/: PKGBUILD  org.lyraos.Vega1.conf  org.lyraos.Vega1.service  org.lyraos.vega.policy  vegad-log-export.service  vegad-log-export.timer  vegad-update-check.service  vegad-update-check.timer  vegad.install  vegad.service
packaging/vegad/logrotate.d/: vegad
packaging/vegad/selinux/: vegad_bootloader.te
packaging/vegad/sudoers.d/: vega-build
packaging/vegad/sysusers.d/: vega-build.conf
packaging/vegad/tmpfiles.d/: vega-build.conf  vega-log.conf
scripts/: a11y-audit.py  benchmark-qt.sh  benchmark-ui.sh  build-local-packages.sh  check-qt-coexistence.sh  dev-install-vegad.sh  install-obs.sh  install.sh  qa-qt.sh  qa-smoke-cli.sh  qa-smoke.sh  uninstall.sh  validate-debian-packages.sh
vega/: .tmp-driver.mjs  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
vega-agent/: README.md  go.mod
vega-agent/cmd/vega-agent/: main.go  platform_other.go  platform_windows.go
vega-agent/internal/agent/: agent.go  agent_test.go  collector.go  collector_windows.go
vega-agent/internal/backup/: backup.go  backup_test.go  backup_windows.go
vega-agent/internal/bluetooth/: bluetooth.go  bluetooth_test.go  bluetooth_windows.go
vega-agent/internal/broker/: broker_windows.go  dispatch.go  dispatch_test.go
vega-agent/internal/displays/: displays.go  displays_test.go  displays_windows.go
vega-cli/: README.md
vega-cli/lib/: backup.sh  datetime.sh  dbus.sh  hardware.sh  logs.sh  menu.sh  monitor.sh  network.sh  painel.sh  services.sh  software.sh  storage.sh  term.sh  theme.dialogrc  ui.sh  users.sh
vega-gtk/: .gitignore  Cargo.toml  README.md  build.rs
vega-gtk/po/: POTFILES.in  en.po  vega-gtk.pot
vega-gtk/resources/: style.css
vega-gtk/src/: application.rs  assistant.rs  i18n.rs  main.rs  model.rs  preferences.rs  screensaver.rs  wallpaper.rs
vega-gtk/src/dbus/: backup.rs  bluetooth.rs  client.rs  datetime.rs  display.rs  firewall.rs  hardware.rs  kernel.rs  logs.rs  mock.rs  mod.rs  monitor.rs  network.rs  services.rs  snapshots.rs  software.rs  storage.rs  system.rs  users.rs
vega-gtk/src/ui/: assistant.rs  backup.rs  bluetooth.rs  datetime.rs  display.rs  kernel.rs  logs.rs  mod.rs  monitor.rs  network.rs  screen.rs  screensaver.rs  services.rs  shell.rs  snapshots.rs  software.rs  sparkline.rs  storage.rs  users.rs  wallpaper.rs
vega-qt/: CMakeLists.txt  README.md
vega-qt/packaging/: org.lyraos.VegaQt.desktop  org.lyraos.VegaQt.metainfo.xml
vega-qt/resources/: resources.qrc  style.qss
vega-qt/src/: audit.cpp  audit.h  dbusclient.cpp  dbusclient.h  dbustypes.cpp  dbustypes.h  main.cpp  mainwindow.cpp  mainwindow.h  routestate.cpp  routestate.h  secretstore.cpp  secretstore.h  theme.cpp  theme.h  validation.cpp  validation.h
vega-qt/tests/: test_core.cpp
vega-xfce/: Cargo.toml  build.rs
vega-xfce/po/: POTFILES.in  vega-xfce.pot
vega-xfce/resources/: style.css
vega-xfce/src/: application.rs  assistant.rs  i18n.rs  main.rs  model.rs  screensaver.rs  wallpaper.rs
vega-xfce/src/ui/: assistant.rs  backup.rs  bluetooth.rs  datetime.rs  kernel.rs  logs.rs  mod.rs  monitor.rs  network.rs  screen.rs  screensaver.rs  services.rs  shell.rs  snapshots.rs  software.rs  storage.rs  users.rs  wallpaper.rs  widgets.rs
vega/scripts/: build-windows-agent.mjs  smoke-windows-installer.ps1  verify-windows-version.ps1
vega/src/main/: index.ts  (+8 more)
vegad/: go.mod
(+164 files in other folders)
