[workspace]
resolver = "3"
members = ["lyra-vega-dbus", "vega-gtk", "vega-xfce"]

[workspace.package]
edition = "2024"
license = "GPL-3.0"
authors = ["Rodrigo Brito"]
rust-version = "1.92"
homepage = "https://github.com/britors/Vega"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
