[package]
name = "lyra-vega-dbus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Cliente D-Bus tipado do contrato org.lyraos.Vega1, compartilhado entre os frontends do Vega"

[dependencies]
async-trait = "0.1.89"
futures-util = "0.3.32"
futures-lite = "2.6.1"
zbus = "5.17.0"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }

[dev-dependencies]
roxmltree = "0.21.1"
