[package]
name = "vega-gtk"
version = "4.0.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "Interface nativa GTK4 do centro de controle Vega"

[dependencies]
gtk = { package = "gtk4", version = "0.11.4", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.9.2", features = ["v1_5"] }
base64 = "0.22.1"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
roxmltree = "0.21.1"
lyra-vega-dbus = { path = "../lyra-vega-dbus" }
